@@ -1,3 +1,11 @@
+2012-12-22 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/main.c,
+	  src/stm8/gen.c,
+	  src/stm8/gen.h,
+	  src/stm8/ralloc.h:
+	  Basic infrastructure for STM8 port.
+
 2012-12-21 Philipp Klaus Krause <pkk AT spth.de>
 
 	* Makefile.common.in,
